# subscribie

./: .all-contributorsrc  .autorc  .bootstrap.env  .dockerignore  .env.docker  .env.docker.example  .env.example  .envsubst.template  .flake8  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHECKS  CONTRIBUTING.md  Dockerfile  Hedgehog.py  Jenkinsfile  MANIFEST.in  Makefile  OWNERS  OWNERS_ALIASES  README.md  TESTING.md  __init__.py  adding-env-settings.sh  adding-env-settings.sh.example  app.py  babel.cfg  data copy.db  data.db  delete-all-test-shops.py  docker-compose.yml  emperor.ini  entrypoint.sh  hedgehog.wsgi  index.js  jamla.json  jamla.py  jamla.yaml  (+23 more)
.github/: pull_request_template.md
docker/: Dockerfile
docs/: README.md  config.toml  run-docs.sh  smoketest-docs.sh
hedgehog/: .env.example  README.md  Template.py  User.py  __init__.py  createdb.py  forms.py  jamla.py  jamla.yaml.example  views.py
jamla/: Jamla.py
kubernetes/: README.md  couchdb-k8s-pod.yaml  cronjob.py  delete.sh  from-scratch-empty-cluster.txt  getd.sh  subscribie-k8s-filesystem.yaml  subscribie-k8s-onboarding-deployment.yaml  subscribie-k8s-onboarding-ingress.yaml  subscribie-k8s-pod.yaml  subscribie-k8s-service.yaml
migrations/: 1-create-table-user.py  env.py
operational_scripts/: README.md  generate-compiled-language-files-3.sh  generate-language-catalog-2.sh  generate-pot-file-1.sh  openit.mjs  recover-database.py
penguin_rest/: Decorators.py  Rest.py  __init__.py
shortly/: .env.example  Hedgehog.py  README  README.md  __init__.py  app.js  check_address_xhr.txt  run.sh  (+7 more)
(+879 files in other folders)
